# django1_project

./: .coverage  .env  .env_example  .gitignore  db.sqlite3  pyproject.toml  requirements.txt
blog/: views.py
blog/migrations/: 0002_alter_post_author.py
blog/static/blog/: main.css
blog/templates/blog/: base.html  home.html  post_detail.html  post_form.html  user_posts.html
django_ucd_project/: settings.py  urls.py
users/management/commands/: ensure_adminuser.py
users/migrations/: 0002_alter_profile_image.py  0003_alter_profile_image.py
users/templates/users/: profile.html
