[project]
name = "django-ucd-project"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "coverage==7.6.10",
    "crispy-bootstrap5==2023.10",
    "dj-database-url>=3.1.2",
    "django==4.2.27",
    "django-crispy-forms==2.1",
    "gunicorn>=25.1.0",
    "pillow>=12.1.1",
    "psycopg2>=2.9.11",
    "whitenoise>=6.12.0",
]
