[project]
name = "django-ucd-project"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "cloudinary>=1.44.1",
    "coverage==7.6.10",
    "crispy-bootstrap5==2023.10",
    "dj-database-url>=3.1.2",
    "django==5.2.0",
    "django-cloudinary-storage>=0.3.0",
    "django-crispy-forms==2.1",
    "gunicorn>=25.1.0",
    "pillow>=11.0.0",
    "psycopg2>=2.9.11",
    "whitenoise>=6.12.0",
]


